# template-happ

./: CHANGELOG.md  README.md  appname.cabal  flake.nix
app/: Main.hs
src/: Appname.hs  CustomPrelude.hs  Prelude.hs
src/Appname/: CustomPrelude.hs
src/Appname/Helpers/: SignalHandlers.hs
template/: check-template.sh  init-app.sh  pre-push.sh  set-app-name.sh  use-template.sh
test/: AppnameTest.hs  Prelude.hs
