cabal-version:      2.4
name:               {appname}
version:            0.1.0.0
synopsis:

-- description:
homepage:

-- bug-reports:
license:            NONE
author:             Sergey Ivanov
maintainer:         ivanovs-4@yandex.ru

-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-deps
    default-language:    Haskell2010

    mixins:
        base (Prelude as BasePrelude)
      , base hiding (Prelude)

    default-extensions:

        ConstraintKinds
        DataKinds
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingStrategies
        DerivingVia
        ExtendedDefaultRules
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        NoMonomorphismRestriction
        OverloadedLabels
        OverloadedStrings
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeFamilies
        ViewPatterns

    build-depends:    base ^>=4.14.1.0
      , containers
      , safe
      , text
      , unix

library
    import: common-deps
    hs-source-dirs:   src
    exposed-modules:
        {Appname}
        {Appname}.Helpers.SignalHandlers
        {Appname}.CustomPrelude
    other-modules:
        Prelude

executable {appname}
    import: common-deps
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        {appname}
    ghc-options:
        -threaded
        -rtsopts
        "-with-rtsopts=-N4 -A64m -AL64m -qn2 -I0"
        -Wall
        -O2
        -eventlog

test-suite {appname}-test
    import: common-deps
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          {Appname}Test.hs
    other-modules:
        Prelude
    build-depends:
        {appname}
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
